force-app/main/default/objects/ErrorLog__c/fields/lineNumber__c.field-meta.xml
<CustomField>
    <fullName>lineNumber__c</fullName>
    <label>lineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>