force-app/main/default/objects/ErrorLog__c/fields/stackTraceString__c.field-meta.xml
<CustomField>
    <fullName>stackTraceString__c</fullName>
    <label>stackTraceString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>