force-app/main/default/objects/ErrorLog__c/fields/typeName__c.field-meta.xml
<CustomField>
    <fullName>typeName__c</fullName>
    <label>typeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>